--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -1,16 +1,40 @@
 {
   "common": {
-    "username": "Nombre de usuario"
+    "username": "Nombre de usuario",
+    "required": "obligatorio",
+    "next": "Siguiente",
+    "back": "Atrás",
+    "done": "Hecho"
+  },
+  "dashboard": {
+    "dashboard_title": "Mi panel",
+    "my_instances": "Mis instancias",
+    "instances_card_title": "Mis instancias",
+    "dataset_column_header": "Conjunto de datos",
+    "repository_column_header": "Repositorio",
+    "status_column_header": "Estado",
+    "validations_card_title": "Mis validaciones",
+    "dataset_name_column_header": "Nombre del conjunto de datos",
+    "repository_name_column_header": "Nombre del repositorio",
+    "prefix_column_header": "Prefijo",
+    "fair_principle_column_header": "Principio FAIR",
+    "upvotes_column_header": "Votos a favor",
+    "downvotes_column_header": "Votos en contra",
+    "private_messages_card_title": "Mis mensajes privados"
   },
   "register": {
-    "signUp": "Registro",
-    "required": "obligatorio",
+    "signUp": "Registrarse",
+    "settings": "Configuración de usuario",
     "username": "Nombre de usuario",
     "email": "Correo electrónico",
     "usernameRequired": "El nombre de usuario es",
     "emailRequired": "El correo electrónico es",
+    "currentPassword": "Contraseña actual",
+    "changeMyPassword": "Cambiar mi contraseña",
     "wrong": "incorrecto",
-    "eMailFormat": "formato de correo electrónico",
+    "change": "Cambiar mi configuración",
+    "required": "obligatorio",
+    "eMailFormat": "Formato de correo electrónico",
     "password": "Contraseña",
     "wrongFormat": "formato incorrecto",
     "atLeastOneLowercase": "Al menos una minúscula",
@@ -25,16 +49,301 @@
   },
   "login": {
     "welcome": "¡Bienvenido!",
+    "welcomeAfterLogin": "Bienvenido de nuevo",
     "password": "Contraseña",
     "login": "Iniciar sesión",
-    "cancel": "Cancelar"
+    "cancel": "Cancelar",
+    "error": "Error de inicio de sesión. Verifique su nombre de usuario y contraseña."
+  },
+  "logout": {
+    "messageAfterLogout": "Sesión cerrada"
   },
   "userSection": {
     "signUp": "Registrarse",
-    "changeLanguage": "Cambiar de idioma",
+    "changeLanguage": "Cambiar idioma",
     "selectLanguage": "Selecciona el idioma",
     "change": "Cambiar",
     "languages": "Idiomas",
     "cancel": "Cancelar"
+  },
+  "repository": {
+    "repositoryName": "Nombre del repositorio",
+    "name": "Nombre",
+    "description": "Descripción",
+    "createButton": "Crear y seleccionar repositorio",
+    "addRepositoryButton": "Haga clic aquí para agregar un nuevo repositorio",
+    "repositorySelection": "Selección de repositorio",
+    "addNewRepositoryButton": "Agregar un nuevo repositorio",
+    "selectCurrentRepositoryButton": "Haga clic aquí para seleccionar un repositorio existente",
+    "repositoryCreated": "El repositorio ha sido creado. Debe ser aprobado antes de aparecer para otros usuarios"
+  },
+  "raiseInstance": {
+    "status_title": "Estado",
+    "needs_title": "Necesidades",
+    "apply_indicators_button": "Aplicar indicadores",
+    "achieved_principles_title": "Principios alcanzados",
+    "findability": "ENCONTRABILIDAD",
+    "accesibility": "ACCESIBILIDAD",
+    "interoperability": "INTEROPERABILIDAD",
+    "reusability": "REUTILIZABILIDAD"
+  },
+  "raiseDataset": {
+    "introduction": "Introducción",
+    "intro_header": "¿Estás listo para cuidar un conjunto de datos? ¡Entonces, has venido al lugar correcto!",
+    "intro_paragraph_1": "Publicar un conjunto de datos en línea también implica asumir la responsabilidad de una serie de tareas. Los conjuntos de datos deben ser cuidados y protegidos si quieres que duren y sean realmente útiles para la comunidad.",
+    "intro_paragraph_2_the": "Los",
+    "intro_paragraph_2_fair_principles": "principios FAIR",
+    "intro_paragraph_2": "nos ayudan a entender cómo publicar un conjunto de datos para que sea encontrable, accesible, interoperable y reutilizable. Además, nos ayudarán a preservarlo y evitar su destrucción.",
+    "intro_paragraph_3": "Este asistente te ayudará a registrar tu conjunto de datos y dar sus primeros pasos hacia la excelencia.",
+    "intro_paragraph_4": "Entonces... ¡Vamos!",
+    "dataset": "Conjunto de datos",
+    "repository": "Repositorio",
+    "create_button": "Crear conjunto de datos",
+    "result": "Resultado",
+    "congratulations_message": "¡Felicidades! Has registrado un nuevo conjunto de datos. Ahora, es hora de criarlo",
+    "dashboard_button": "Ir al panel del conjunto de datos",
+    "dataset_information": "Información del conjunto de datos",
+    "dataset_name": "Nombre del conjunto de datos",
+    "dataset_name_required_error": "El nombre es",
+    "author_name": "Nombre del autor",
+    "author_name_placeholder": "Nombre del autor",
+    "author_name_hint": "¿Quién es el autor de este conjunto de datos?",
+    "author_name_required_error": "El autor es",
+    "maintainer_name": "Nombre del mantenedor",
+    "maintainer_name_placeholder": "Nombre del mantenedor",
+    "maintainer_name_hint": "¿Cómo quieres aparecer como mantenedor de este conjunto de datos?",
+    "maintainer_name_required_error": "El autor es",
+    "dataset_description": "Descripción del conjunto de datos",
+    "dataset_description_hint": "Escribe una breve descripción para informar a otros usuarios sobre este conjunto de datos",
+    "dataset_description_required_error": "Se requiere una descripción",
+    "creation_date": "Fecha de creación",
+    "creation_date_hint": "Especifica la fecha de creación de este conjunto de datos",
+    "creation_date_required_error": "La fecha de creación es",
+    "repository_details": "Detalles del repositorio",
+    "doi": "DOI",
+    "uniqueIdentifier": "Identificador único",
+    "format": "Por ejemplo",
+    "doi_required_error": "El DOI es",
+    "doi_pattern_error": "Esto no parece ser un formato de DOI",
+    "dataset_instance_information": "Ir a la información de la instancia del conjunto de datos"
+  },
+  "pickDataset": {
+    "search_placeholder": "Buscar por nombre, descripción, autor...",
+    "name_column_header": "Nombre",
+    "description_column_header": "Descripción",
+    "author_column_header": "Registrado por",
+    "registration_date_column_header": "Fecha de registro",
+    "name_sort_description": "Ordenar por nombre",
+    "description_sort_description": "Ordenar por descripción",
+    "author_sort_description": "Ordenar por autor",
+    "registration_date_sort_description": "Ordenar por fecha de registro",
+    "paginator_aria_label": "Seleccionar página"
+  },
+  "datasetInfo": {
+    "maintained_by_multiple_authors": "Mantenido por múltiples autores en",
+    "maintained_by_single_author": "Mantenido por",
+    "dataset_information_title": "Información del conjunto de datos",
+    "dataset_information_description": "Descripción",
+    "dataset_information_original_author": "Autor original",
+    "dataset_information_creation_date": "Fecha de creación",
+    "repositories_title": "Instancias"
+  },
+  "instancesTable": {
+    "repositories_title": "Instancias",
+    "name_column_header": "Nombre",
+    "maintainer_column_header": "Mantenedor",
+    "add_new_dataset_button": "Agregar un nuevo repositorio"
+  },
+  "repositoryInfo": {
+    "description": "Descripción",
+    "maintained_by_multiple_authors": "Mantenido por múltiples autores en",
+    "maintained_by_single_author": "Mantenido por",
+    "dataset_information_title": "Información del conjunto de datos",
+    "dataset_information_description": "Descripción",
+    "dataset_information_original_author": "Autor original",
+    "dataset_information_creation_date": "Fecha de creación"
+  },
+  "feed": {
+    "findability_title": "Encontrabilidad",
+    "findability_description": "Los metadatos y los datos deben ser fáciles de encontrar tanto para humanos como para computadoras",
+    "accessibility_title": "Accesibilidad",
+    "accessibility_description": "El usuario necesita saber cómo se puede acceder a los datos",
+    "interoperability_title": "Interoperabilidad",
+    "interoperability_description": "Los datos generalmente necesitan integrarse con otros datos e interoperar con aplicaciones o flujos de trabajo para análisis, almacenamiento y procesamiento.",
+    "reusability_title": "Reutilizabilidad",
+    "reusability_description": "Los metadatos y los datos deben estar bien descritos para que puedan replicarse y/o combinarse en diferentes entornos.",
+    "confirm_selected_indicators_label": "Confirmar indicadores seleccionados",
+    "confirm_selected_indicators_description": "Esta es la lista de indicadores que deseas aplicar en tu repositorio. Haz clic en uno de ellos para eliminarlo de la lista.",
+    "done_step_label": "Hecho",
+    "done_message": "¡Tu conjunto de datos te lo agradece!",
+    "go_to_instance_page_button": "Ir a la página de la instancia"
+  },
+  "compliance": {
+    "dataset_column_header": "Conjunto de datos",
+    "repository_column_header": "Repositorio",
+    "indicator_column_header": "Indicador",
+    "fair_principle_column_header": "Principio FAIR",
+    "author_column_header": "Autor",
+    "date_column_header": "Fecha"
+  },
+  "validate": {
+    "validation_details_label": "Detalles de la validación",
+    "going_to_validate_text": "Vas a validar que el conjunto de datos",
+    "repository": "Repositorio",
+    "has_applied_indicator_text": "Ha aplicado el indicador",
+    "validation_steps_intro": "Para realizar la validación, sigue los siguientes pasos",
+    "step_1_text": "Accede al conjunto de datos, en",
+    "step_1_link_note": "se abrirá en una nueva pestaña.",
+    "step_2_text": "Verifica que el conjunto de datos haya aplicado el indicador",
+    "enough_information_button_text": "Tengo suficiente información para validar la instancia",
+    "need_more_info_button_text": "Necesito más información sobre este indicador antes de validar la instancia",
+    "indicator_details_label": "Detalles del indicador",
+    "indicator_info_card_title": "Información del indicador",
+    "description_title": "Descripción",
+    "more_info_title": "¿Necesitas más información?",
+    "more_info_link_note": "Abierto en una nueva pestaña",
+    "enough_information": "Tengo suficiente información para validar la instancia",
+    "go_back_button_text": "Volver",
+    "validation_label": "Validación",
+    "validation_question_1": "¿La instancia del conjunto de datos",
+    "validation_question_2": "publicada en el Repositorio",
+    "validation_question_3": "ha aplicado el indicador",
+    "yes_button_text": "Sí, la instancia está aplicando el indicador",
+    "no_button_text": "No, la instancia NO está aplicando el indicador",
+    "negative_comment_intro": "Por favor, proporciona un comentario (opcional) explicando tu decisión. Este comentario será público y ayudará al mantenedor de esta instancia a entender por qué falta el indicador.",
+    "leave_comment_label": "Dejar un comentario",
+    "leave_comment_placeholder": "Comentario",
+    "validate_button_text": "¡VALIDAR!",
+    "results_label": "Resultados",
+    "thanks_card_title": "Gracias",
+    "submitted_validation_text": "Has enviado tu validación.",
+    "validate_more_button_text": "Validar más indicadores"
+  },
+  "generic-table": {
+    "search_placeholder": "Buscar por cualquier valor de columna"
+  },
+  "rescue": {
+    "name": "Nombre",
+    "description": "Descripción",
+    "registrationDate": "Fecha de registro",
+    "category": "Categoría"
+  },
+  "missions": {
+    "select_your_missions": "Elige tus misiones",
+    "your_missions": "Tus misiones",
+    "earn_exclamation_begging": "Gana",
+    "earn_exclamation_end": "puntos!",
+    "select": "Seleccionar",
+    "unselect": "Deseleccionar",
+    "other": "Otras misiones",
+    "completed_missions": "Misiones completadas",
+    "points_exclamation": "puntos!",
+    "mission_completed": "Has completado la misión"
+  },
+  "raiseActions": {
+    "raiseActions": "Acciones",
+    "your_outdated_actions": "Tus acciones caducadas",
+    "your_next_actions": "Tus próximas acciones",
+    "your_not_contract_actions": "Levantar instancias que no tienen un acuerdo",
+    "raise": "Levantar"
+  },
+  "admin": {
+    "save": "Guardar",
+    "delete": "Eliminar"
+  },
+  "userAdmin": {
+    "description": "Haz clic en un usuario para acceder a sus detalles",
+    "click_to_view_profile": "Haz clic en un usuario para ver su perfil",
+    "danger_zone_title": "Zona de peligro",
+    "promote_to_admin_toggle": "Promover a administrador",
+    "warning": "Advertencia",
+    "promote_to_admin_2": "¡Estás promoviendo a este usuario a administrador!",
+    "promote_to_admin_3": "podrá prohibirte, reducir tus privilegios o eliminar tu cuenta",
+    "ban_user_toggle": "¡Prohibir a este usuario!",
+    "ban_user_warning": "¡Estás prohibiendo a este usuario!",
+    "delete_account": "Eliminar esta cuenta",
+    "saved": "La configuración ha sido guardada.",
+    "deleted": "El usuario ha sido eliminado."
+  },
+  "repositoryAdmin": {
+    "description": "Haz clic en un repositorio para acceder a sus detalles",
+    "click_to_view_profile": "Haz clic aquí para ver el repositorio",
+    "name": "Nombre",
+    "address": "URL de la dirección",
+    "delete_repository": "Eliminar repositorio",
+    "deleted": "El repositorio ha sido eliminado",
+    "saved": "El repositorio ha sido guardado"
+  },
+  "datasetAdmin": {
+    "description": "Haz clic en un conjunto de datos para acceder a sus detalles",
+    "descriptionColumn": "Descripción",
+    "click_to_view_profile": "Haz clic aquí para ver el repositorio",
+    "name": "Nombre",
+    "delete_repository": "Eliminar repositorio",
+    "deleted": "El conjunto de datos ha sido eliminado",
+    "saved": "El conjunto de datos ha sido guardado"
+  },
+  "instancesAdmin": {
+    "description": "Haz clic en una instancia para acceder a sus detalles",
+    "repositoryName": "Repositorio",
+    "datasetName": "Conjunto de datos",
+    "deleted": "La instancia ha sido eliminada.",
+    "saved": "La instancia ha sido guardada."
+  },
+  "complianceAdmin": {
+    "description": "Haz clic en un cumplimiento para acceder a sus detalles",
+    "datasetName": "Conjunto de datos",
+    "repositoryName": "Repositorio",
+    "fairPrincipleId": "ID del Principio FAIR",
+    "fairPrincipleName": "Nombre del Principio FAIR",
+    "deleted": "La instancia ha sido eliminada.",
+    "saved": "La instancia ha sido guardada."
+  },
+  "missionAdmin": {
+    "description": "Haz clic en un principio FAIR para acceder a sus detalles",
+    "username": "Nombre de usuario",
+    "descriptionColumn": "Descripción",
+    "points": "Puntos",
+    "level": "Nivel",
+    "deleted": "El principio FAIR ha sido eliminado.",
+    "saved": "El principio FAIR ha sido guardado."
+  },
+  "fairPrinciplesAdmin": {
+    "description": "Haz clic en un principio FAIR para acceder a sus detalles",
+    "name": "Nombre",
+    "descriptionColumn": "Descripción",
+    "url": "URL",
+    "namePrefix": "Prefijo",
+    "difficulty": "Dificultad",
+    "category": "Categoría",
+    "deleted": "El principio FAIR ha sido eliminado.",
+    "saved": "El principio FAIR ha sido guardado."
+  },
+  "welcome_user": {
+    "title": "¡Bienvenido de nuevo! ¿Qué quieres hacer?",
+    "search_label": "Buscar conjuntos de datos",
+    "search_button": "Buscar",
+    "dashboard_title": "Panel",
+    "dataset_count": "Estás gestionando {{count}} conjuntos de datos.",
+    "go_to_dashboard": "Ir al panel",
+    "contribute_title": "Contribuir",
+    "contribute_description": "Puedes contribuir de muchas maneras",
+    "verify_link": "Ayuda a verificar los indicadores FAIR en otros conjuntos de datos",
+    "rescue_link": "Rescatar un conjunto de datos abandonado",
+    "raise_link": "Levantar un nuevo conjunto de datos",
+    "ranking_title": "Clasificación",
+    "points": "Tienes <strong>{{points}} puntos</strong> y estás clasificado en <strong>#{{position}}</strong>, ¿quieres comprobar algunas estadísticas?",
+    "ranking_points": "Clasificación de usuarios por número de puntos",
+    "ranking_datasets": "Clasificación de usuarios por número de conjuntos de datos levantados",
+    "ranking_validations": "Clasificación de usuarios por número de validaciones"
+  },
+  "ranking": {
+    "username": "Nombre de usuario",
+    "totalScore": "Puntuación total",
+    "compliances": "Cumplimientos",
+    "datasets": "Conjuntos de datos",
+    "rescued": "Rescatados",
+    "validations": "Validaciones",
+    "registrationDate": "Fecha de registro"
   }
 }
